[tool.poetry]
name = "flowrun"
version = "0.1.5"
description = ""
authors = ["pskishere <pskishere@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sseclient = "^0.0.27"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
